# LabPPBot_Cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  install_vcpkg.bat  run.bat  update.cpp
.github/ISSUE_TEMPLATE/: bug-fix.md  bug_report.md  new-feature.md  new-idea.md
.github/workflows/: formatting.yml  main.yml
message/: index.js
protobuf/: achievement.proto  aiconfig.proto  config.proto  member.proto  message.proto  popn_songs.proto  price.proto  sdvx_songs.proto  turtle.proto
src/: CMakeLists.txt  HTTPRequest.hpp  checked.h  core.cpp  core.h  main.cpp  message.cpp  message.h  scheduler.cpp  scheduler.h  utf8_core.h  util.cpp  util.h
src/protobuf/: CMakeLists.txt
